# git-maestro

./: .gitallowed  .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
git_maestro/: __init__.py  cli.py  description_helper.py  mcp_server.py  menu.py  ssh_config.py  state.py
git_maestro/actions/: __init__.py  add_gitignore.py  add_readme.py  base.py  create_remote_repo.py  download_job_traces.py  fetch_github_actions.py  get_github_actions_logs.py  init_repo.py  initial_commit.py  refresh_github_actions.py  setup_remote.py  view_failed_jobs.py
scripts/: install-from-local-pypi.sh  publish-to-pypiserver.sh  start-local-pypi.sh  test-package-install.sh
tests/: README.md  __init__.py  conftest.py  test_actions.py  test_cli.py  test_ssh_config.py  test_state.py
