[project]
name = "git-maestro"
version = "0.1.0"
description = "A slick CLI tool to manage and progress git repositories with interactive menus"
authors = [
    {name = "Ben", email = "ben@example.com"},
]
dependencies = [
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "gitpython>=3.1.40",
    "PyGithub>=2.1.1",
    "python-gitlab>=4.4.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
git-maestro = "git_maestro.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.12.1",
    "ruff>=0.1.8",
    "build>=1.0.0",
]
deploy_test = [
    "pypiserver>=2.4.0",
    "passlib>=1.7.4",
]
deploy = [
    "twine>=4.0.0",
    "build>=1.0.0",
]

[tool.pdm.scripts]
test = "pytest"
test-verbose = "pytest -v"
test-coverage = "pytest --cov=git_maestro"
lint = "ruff check ."
format = "black ."
build = "python -m build"
test-install = {shell = "bash scripts/test-package-install.sh", help = "Test package installation and imports"}
pypi-local = {shell = "bash scripts/start-local-pypi.sh", help = "Start local PyPI server for testing"}
install-local = {shell = "bash scripts/install-from-local-pypi.sh", help = "Install from local PyPI server"}
publish-test = {shell = "bash scripts/publish-to-pypiserver.sh", help = "Publish to local PyPI server"}
